@@ -93,6 +93,7 @@ Federicco Mena Quintero
 David Raeman
 Etan Reisner
 Kristian Rietveld
+Pekka Riikonen
 Tim Ringenbach
 Andrew Rodland
 Neil Sanchala
